# Perception-Stack-Simulation

./: CMakeLists.txt  LICENSE2  README.md
include/perception_sim/: bounding_box.hpp  clustering.hpp  csv_logger.hpp  eigen_ops.hpp  filtering.hpp  logger.hpp  pca_analysis.hpp  pipeline.hpp  point_cloud_io.hpp  timing.hpp  types.hpp  visualization.hpp
scripts/: build.sh  compare_runs.sh  run_pipeline.sh  run_tests.sh
scripts/analysis/: common.py  compare_runs.py  compute_metrics.py  generate_overlay.py  generate_plots.py  generate_report.py  list_runs.py
src/: bounding_box.cpp  clustering.cpp  csv_logger.cpp  eigen_ops.cpp  filtering.cpp  logger.cpp  main.cpp  pca_analysis.cpp  pipeline.cpp  point_cloud_io.cpp  timing.cpp  visualization.cpp
tests/: test_bounding_box.cpp  test_clustering.cpp  test_eigen_ops.cpp  test_filtering.cpp  test_pca_analysis.cpp
